{
  "version": 4,
  "terraform_version": "1.0.4",
  "serial": 95,
  "lineage": "ca1c208d-1390-5583-4e0a-94e6ade1f15d",
  "resources": [
    {
      "module": "module.cloud-nat_deployments",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "sdypp-framework-ago/us-central1/router-sdypp-framework-ago-vpc-deployments/nat-router-sdypp-framework-ago-vpc-deployments",
            "min_ports_per_vm": 64,
            "name": "nat-router-sdypp-framework-ago-vpc-deployments",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sdypp-framework-ago",
            "region": "us-central1",
            "router": "router-sdypp-framework-ago-vpc-deployments",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud-nat_deployments.google_compute_router.router",
            "module.cloud-nat_deployments.random_string.name_suffix",
            "module.vpc_deployments.module.routes.google_compute_route.route",
            "module.vpc_deployments.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.cloud_router_deployments.google_compute_router.router",
            "module.cloud_router_deployments.google_compute_router_nat.nats",
            "module.vpc_deployments.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_deployments.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_deployments.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat_management",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "sdypp-framework-ago/us-east1/router-sdypp-framework-ago-vpc-management/nat-router-sdypp-framework-ago-vpc-management",
            "min_ports_per_vm": 64,
            "name": "nat-router-sdypp-framework-ago-vpc-management",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sdypp-framework-ago",
            "region": "us-east1",
            "router": "router-sdypp-framework-ago-vpc-management",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.cloud_router_management.google_compute_router_nat.nats",
            "module.vpc_management.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_management.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_management.module.vpc.google_compute_network.network",
            "module.vpc_management.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.cloud-nat_management.random_string.name_suffix",
            "module.cloud_router_management.google_compute_router.router",
            "module.vpc_management.module.routes.google_compute_route.route",
            "module.cloud-nat_management.google_compute_router.router"
          ]
        }
      ]
    },
    {
      "module": "module.cloud-nat_resources",
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "sdypp-framework-ago/us-west1/router-sdypp-framework-ago-vpc-resources/nat-router-sdypp-framework-ago-vpc-resources",
            "min_ports_per_vm": 64,
            "name": "nat-router-sdypp-framework-ago-vpc-resources",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "sdypp-framework-ago",
            "region": "us-west1",
            "router": "router-sdypp-framework-ago-vpc-resources",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "module.vpc_resources.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_resources.module.vpc.google_compute_network.network",
            "module.vpc_resources.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.cloud_router_resources.google_compute_router.router",
            "module.cloud_router_resources.google_compute_router_nat.nats",
            "module.vpc_resources.module.firewall_rules.google_compute_firewall.rules",
            "module.cloud-nat_resources.google_compute_router.router",
            "module.cloud-nat_resources.random_string.name_suffix",
            "module.vpc_resources.module.routes.google_compute_route.route"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router_deployments",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-11T12:31:23.165-07:00",
            "id": "projects/sdypp-framework-ago/regions/us-central1/routers/router-sdypp-framework-ago-vpc-deployments",
            "name": "router-sdypp-framework-ago-vpc-deployments",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-deployments",
            "project": "sdypp-framework-ago",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/regions/us-central1/routers/router-sdypp-framework-ago-vpc-deployments"
          },
          "dependencies": [
            "module.vpc_deployments.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc_deployments.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_deployments.module.routes.google_compute_route.route",
            "module.vpc_deployments.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_deployments.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router_management",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-11T12:31:13.534-07:00",
            "id": "projects/sdypp-framework-ago/regions/us-east1/routers/router-sdypp-framework-ago-vpc-management",
            "name": "router-sdypp-framework-ago-vpc-management",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-management",
            "project": "sdypp-framework-ago",
            "region": "us-east1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/regions/us-east1/routers/router-sdypp-framework-ago-vpc-management"
          },
          "dependencies": [
            "module.vpc_management.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_management.module.routes.google_compute_route.route",
            "module.vpc_management.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_management.module.vpc.google_compute_network.network",
            "module.vpc_management.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.cloud_router_resources",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-11T12:31:26.388-07:00",
            "id": "projects/sdypp-framework-ago/regions/us-west1/routers/router-sdypp-framework-ago-vpc-resources",
            "name": "router-sdypp-framework-ago-vpc-resources",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-resources",
            "project": "sdypp-framework-ago",
            "region": "us-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/regions/us-west1/routers/router-sdypp-framework-ago-vpc-resources"
          },
          "dependencies": [
            "module.vpc_resources.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_resources.module.routes.google_compute_route.route",
            "module.vpc_resources.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_resources.module.vpc.google_compute_network.network",
            "module.vpc_resources.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules_deployments",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "sdypp-framework-ago-vpc-deployments-allow-all-egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-08-11T12:31:22.289-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-deployments-allow-all-egress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sdypp-framework-ago-vpc-deployments-allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-deployments",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-deployments-allow-all-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_deployments.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_deployments.module.routes.google_compute_route.route",
            "module.vpc_deployments.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_deployments.module.vpc.google_compute_network.network",
            "module.vpc_deployments.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        },
        {
          "index_key": "sdypp-framework-ago-vpc-deployments-allow-all-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-08-11T12:31:22.274-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-deployments-allow-all-ingress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sdypp-framework-ago-vpc-deployments-allow-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-deployments",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-deployments-allow-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_deployments.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_deployments.module.vpc.google_compute_network.network",
            "module.vpc_deployments.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc_deployments.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_deployments.module.routes.google_compute_route.route"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules_management",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "sdypp-framework-ago-vpc-management-allow-all-egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-08-11T12:31:12.092-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-management-allow-all-egress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sdypp-framework-ago-vpc-management-allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-management",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-management-allow-all-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_management.module.routes.google_compute_route.route",
            "module.vpc_management.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_management.module.vpc.google_compute_network.network",
            "module.vpc_management.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc_management.module.firewall_rules.google_compute_firewall.rules"
          ]
        },
        {
          "index_key": "sdypp-framework-ago-vpc-management-allow-all-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-08-11T12:31:12.113-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-management-allow-all-ingress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sdypp-framework-ago-vpc-management-allow-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-management",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-management-allow-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_management.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_management.module.routes.google_compute_route.route",
            "module.vpc_management.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_management.module.vpc.google_compute_network.network",
            "module.vpc_management.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host"
          ]
        }
      ]
    },
    {
      "module": "module.firewall_rules_resources",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "sdypp-framework-ago-vpc-resources-allow-all-egress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-08-11T12:31:24.997-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-resources-allow-all-egress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sdypp-framework-ago-vpc-resources-allow-all-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-resources",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-resources-allow-all-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_resources.module.vpc.google_compute_network.network",
            "module.vpc_resources.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc_resources.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_resources.module.routes.google_compute_route.route",
            "module.vpc_resources.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        },
        {
          "index_key": "sdypp-framework-ago-vpc-resources-allow-all-ingress",
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2021-08-11T12:31:25.746-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-resources-allow-all-ingress",
            "log_config": [
              {
                "metadata": "INCLUDE_ALL_METADATA"
              }
            ],
            "name": "sdypp-framework-ago-vpc-resources-allow-all-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-resources",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/firewalls/sdypp-framework-ago-vpc-resources-allow-all-ingress",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_resources.module.vpc.google_compute_network.network",
            "module.vpc_resources.module.vpc.google_compute_shared_vpc_host_project.shared_vpc_host",
            "module.vpc_resources.module.firewall_rules.google_compute_firewall.rules",
            "module.vpc_resources.module.routes.google_compute_route.route",
            "module.vpc_resources.module.subnets.google_compute_subnetwork.subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployments.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "sdypp-framework-ago-vpc-deployments-egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/sdypp-framework-ago/global/routes/sdypp-framework-ago-vpc-deployments-egress-internet",
            "name": "sdypp-framework-ago-vpc-deployments-egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-deployments",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/routes/sdypp-framework-ago-vpc-deployments-egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_deployments.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_deployments.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployments.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-central1/sdypp-framework-ago-subnet-deployments",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-11T12:30:37.730-07:00",
            "gateway_address": "192.168.64.1",
            "id": "projects/sdypp-framework-ago/regions/us-central1/subnetworks/sdypp-framework-ago-subnet-deployments",
            "ip_cidr_range": "192.168.64.0/20",
            "name": "sdypp-framework-ago-subnet-deployments",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-deployments",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sdypp-framework-ago",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.80.0/20",
                "range_name": "sdypp-framework-ago-subnet-deployments-pods"
              },
              {
                "ip_cidr_range": "192.168.96.0/20",
                "range_name": "sdypp-framework-ago-subnet-deployments-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/regions/us-central1/subnetworks/sdypp-framework-ago-subnet-deployments"
          },
          "dependencies": [
            "module.vpc_deployments.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_deployments.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-deployments",
            "mtu": 0,
            "name": "sdypp-framework-ago-vpc-deployments",
            "project": "sdypp-framework-ago",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-deployments"
          }
        }
      ]
    },
    {
      "module": "module.vpc_management.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "sdypp-framework-ago-vpc-management-egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/sdypp-framework-ago/global/routes/sdypp-framework-ago-vpc-management-egress-internet",
            "name": "sdypp-framework-ago-vpc-management-egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-management",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/routes/sdypp-framework-ago-vpc-management-egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_management.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_management.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_management.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-east1/sdypp-framework-ago-subnet-management",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-11T12:30:27.558-07:00",
            "gateway_address": "192.168.64.1",
            "id": "projects/sdypp-framework-ago/regions/us-east1/subnetworks/sdypp-framework-ago-subnet-management",
            "ip_cidr_range": "192.168.64.0/20",
            "name": "sdypp-framework-ago-subnet-management",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-management",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sdypp-framework-ago",
            "region": "us-east1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.80.0/20",
                "range_name": "sdypp-framework-ago-subnet-management-pods"
              },
              {
                "ip_cidr_range": "192.168.96.0/20",
                "range_name": "sdypp-framework-ago-subnet-management-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/regions/us-east1/subnetworks/sdypp-framework-ago-subnet-management"
          },
          "dependencies": [
            "module.vpc_management.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_management.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-management",
            "mtu": 0,
            "name": "sdypp-framework-ago-vpc-management",
            "project": "sdypp-framework-ago",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-management"
          }
        }
      ]
    },
    {
      "module": "module.vpc_resources.module.routes",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "route",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "sdypp-framework-ago-vpc-resources-egress-internet",
          "schema_version": 0,
          "attributes": {
            "description": "route through IGW to access internet",
            "dest_range": "0.0.0.0/0",
            "id": "projects/sdypp-framework-ago/global/routes/sdypp-framework-ago-vpc-resources-egress-internet",
            "name": "sdypp-framework-ago-vpc-resources-egress-internet",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-resources",
            "next_hop_gateway": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/gateways/default-internet-gateway",
            "next_hop_ilb": "",
            "next_hop_instance": "",
            "next_hop_instance_zone": null,
            "next_hop_ip": "",
            "next_hop_network": "",
            "next_hop_vpn_tunnel": "",
            "priority": 1000,
            "project": "sdypp-framework-ago",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/routes/sdypp-framework-ago-vpc-resources-egress-internet",
            "tags": [
              "egress-inet"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc_resources.module.subnets.google_compute_subnetwork.subnetwork",
            "module.vpc_resources.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resources.module.subnets",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": "us-west1/sdypp-framework-ago-subnet-resources",
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-08-11T12:30:27.765-07:00",
            "gateway_address": "192.168.128.1",
            "id": "projects/sdypp-framework-ago/regions/us-west1/subnetworks/sdypp-framework-ago-subnet-resources",
            "ip_cidr_range": "192.168.128.0/20",
            "name": "sdypp-framework-ago-subnet-resources",
            "network": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-resources",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "sdypp-framework-ago",
            "region": "us-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.144.0/20",
                "range_name": "sdypp-framework-ago-subnet-resources-pods"
              },
              {
                "ip_cidr_range": "192.168.160.0/20",
                "range_name": "sdypp-framework-ago-subnet-resources-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/regions/us-west1/subnetworks/sdypp-framework-ago-subnet-resources"
          },
          "dependencies": [
            "module.vpc_resources.module.vpc.google_compute_network.network"
          ]
        }
      ]
    },
    {
      "module": "module.vpc_resources.module.vpc",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-resources",
            "mtu": 0,
            "name": "sdypp-framework-ago-vpc-resources",
            "project": "sdypp-framework-ago",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/sdypp-framework-ago/global/networks/sdypp-framework-ago-vpc-resources"
          }
        }
      ]
    }
  ]
}